--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-info">
             <div data-aos="fade-up" class="infoimportante">
-                <a class="boton" target="_blank"  href="https://calendar.app.google/rYqnKZTSmqF1htHX9">AGENDAR</a>    
+                <a class="boton" target="_blank"  href="https://calendar.app.google/9SuWgi8pbFPQTY4N8">AGENDAR</a>    
             </div>
        </div>
     </header>
@@ -40,8 +40,8 @@
    
     <div class="segundo"> 
       <p data-aos="fade-up">TE ESPERO PARA FESTEJAR <br>  MI PRIMER AÑITO <br><br>
-        📅 13 DE SEPTIEMBRE<br>⏰ DE 15:30 A 19 HS <br> 📍CASONA DEL FRANCÉS <br> PINAR DEL RIO 1792 - VILLA DEL ROSARIO<br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
-      <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://maps.app.goo.gl/hBbt6BYVQNL5GNko6?g_st=iw">CÓMO LLEGAR</a>    
+        📅 28 DE SEPTIEMBRE<br>⏰ DE 13 A 18 HS <br> 📍 3450 RICARDO ROJAS 3450 <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
+      <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://www.google.com/maps/place/Ricardo+Rojas+3450,+B1616CVD+Ingeniero+Pablo+Nogu%C3%A9s,+Provincia+de+Buenos+Aires/@-34.4758944,-58.707208,17z/data=!3m1!4b1!4m5!3m4!1s0x95bca2f135433f8d:0x8c1d407bfc673f75!8m2!3d-34.4758944!4d-58.707208?entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D">CÓMO LLEGAR</a>    
   </div>
   <div class="galeria2">
     <img class="f1" src="./img/2.png" alt="foto">
@@ -59,8 +59,8 @@
         -->
         <div class="main-bloque">
             <img data-aos="fade-up"  src="./figuras/icon-3.png" alt="">
-            <p data-aos="fade-up" >TU PRESENCIA ES MUY IMPORTANTE, NO OLVIDES CONFIRMAR ASISTENCIA CON MIS PAPIS ANTES DEL 08 DE SEPTIEMBRE </p>
-            <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/4hncl6">CONFIRMAR</a>    
+            <p data-aos="fade-up" >TU PRESENCIA ES MUY IMPORTANTE, NO OLVIDES CONFIRMAR ASISTENCIA CON MIS PAPIS ANTES DEL 21 DE SEPTIEMBRE </p>
+            <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/of7a78">CONFIRMAR</a>    
         </div>
   </main>
   
@@ -81,7 +81,7 @@
           </div>
           <div>
             <h2 data-aos="fade-up" >GIOVANNA</h2>
-            <H3 data-aos="fade-up">13.09.25</H3>
+            <H3 data-aos="fade-up">28.09.25</H3>
           </div>
           <div>
             <img class="espejo" src="./figuras/icon-1.png" alt="">
