--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    
     <div class="segundo"> 
       <p data-aos="fade-up">TE ESPERO PARA FESTEJAR <br>  MI PRIMER AÑITO <br><br>
-        📅 28 DE SEPTIEMBRE<br>⏰ DE 13 A 18 HS <br> 📍 3450 RICARDO ROJAS 3450 <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
+        📅 28 DE SEPTIEMBRE<br>⏰ DE 13 A 18 HS <br> 📍 RICARDO ROJAS 3450 <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
       <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://www.google.com/maps/place/Ricardo+Rojas+3450,+B1616CVD+Ingeniero+Pablo+Nogu%C3%A9s,+Provincia+de+Buenos+Aires/@-34.4758944,-58.707208,17z/data=!3m1!4b1!4m5!3m4!1s0x95bca2f135433f8d:0x8c1d407bfc673f75!8m2!3d-34.4758944!4d-58.707208?entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D">CÓMO LLEGAR</a>    
   </div>
   <div class="galeria2">
